Switched PCA backend to use BiocSingular::runPCA.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,3 +14,7 @@ importFrom('cowplot', 'plot_grid', 'ggdraw', 'draw_label')
 importFrom('reshape2', 'melt')
 importFrom('stats', 'prcomp', 'var', 'cor', 'cor.test', 'symnum')
 importFrom('grDevices', 'colorRampPalette')
+importFrom('DelayedMatrixStats', 'rowVars')
+importFrom('BiocSingular', 'ExactParam', 'runPCA')
+importFrom('methods', 'is')
+importFrom('Matrix', 't')
