--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,6 @@ Maintainer: Kevin Blighe <kevin@clinicalbioinformatics.co.uk>, Myles Lewis <myle
 Description: Principal Components Analysis (PCA) is a very powerful technique that has wide applicability in data science, bioinformatics, and further afield. It was initially developed to analyse large volumes of data in order to tease out the differences/relationships between the logical entities being analysed. It extracts the fundamental structure of the data without the need to build any model to represent it. This 'summary' of the data is arrived at through a process of reduction that can transform the large number of variables into a lesser number that are uncorrelated, i.e., the principal components, whilst at the same time being capable of easy interpretation on the original data.
 License: GPL-3
 Depends:
-  stats,
   ggplot2,
   ggrepel,
   reshape2,
@@ -15,6 +14,11 @@ Depends:
   grDevices,
   cowplot
 Imports:
+  methods,
+  stats,
+  Matrix,
+  DelayedMatrixStats,
+  BiocSingular
 Suggests:
   RUnit,
   BiocGenerics,
