Added an elbow point detector function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export('biplot')
 export('pairsplot')
 export('plotloadings')
 export('eigencorplot')
+export('findElbowPoint')
 import('ggplot2')
 import('ggrepel')
 import('lattice')
