--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export('pairsplot')
 export('plotloadings')
 export('eigencorplot')
 export('findElbowPoint')
+export('parallelPCA')
 import('ggplot2')
 import('ggrepel')
 import('lattice')
@@ -15,7 +16,11 @@ importFrom('cowplot', 'plot_grid', 'ggdraw', 'draw_label')
 importFrom('reshape2', 'melt')
 importFrom('stats', 'prcomp', 'var', 'cor', 'cor.test', 'symnum')
 importFrom('grDevices', 'colorRampPalette')
-importFrom('DelayedMatrixStats', 'rowVars')
+importFrom('DelayedMatrixStats', 'colVars')
 importFrom('BiocSingular', 'ExactParam', 'runPCA')
 importFrom('methods', 'is')
 importFrom('Matrix', 't')
+importFrom('Rcpp', 'sourceCpp')
+importFrom('dqrng', 'generateSeedVectors')
+importFrom('BiocParallel', 'bpmapply', 'SerialParam')
+useDynLib(PCAtools)
