--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom('reshape2', 'melt')
 importFrom('stats', 'prcomp', 'var', 'cor', 'cor.test', 'symnum')
 importFrom('grDevices', 'colorRampPalette')
 importFrom('DelayedMatrixStats', 'colVars')
+importFrom('DelayedArray', 'DelayedArray')
 importFrom('BiocSingular', 'ExactParam', 'runPCA')
 importFrom('methods', 'is')
 importFrom('Matrix', 't')
