Hardened pca() to extremes of removeVar inputs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom('DelayedMatrixStats', 'colVars')
 importFrom('DelayedArray', 'DelayedArray')
 importFrom('BiocSingular', 'ExactParam', 'runPCA')
 importFrom('methods', 'is')
+importFrom('utils', 'head')
 importFrom('Matrix', 't')
 importFrom('Rcpp', 'sourceCpp')
 importFrom('dqrng', 'generateSeedVectors')
