Add p.adjust to eigencorplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,7 @@ import('ggrepel')
 import('lattice')
 importFrom('cowplot', 'plot_grid', 'ggdraw', 'draw_label')
 importFrom('reshape2', 'melt')
-importFrom('stats', 'prcomp', 'var', 'cor', 'cor.test', 'symnum')
+importFrom('stats', 'prcomp', 'var', 'cor', 'cor.test', 'symnum', 'p.adjust')
 importFrom('grDevices', 'colorRampPalette')
 importFrom('DelayedMatrixStats', 'colVars')
 importFrom('DelayedArray', 'DelayedArray')
