Updated NAMESPACE, added documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export('plotloadings')
 export('eigencorplot')
 export('findElbowPoint')
 export('parallelPCA')
+export('chooseGavishDonoho')
+export('chooseMarchenkoPastur')
 import('ggplot2')
 import('ggrepel')
 import('lattice')
