stat ellipses; Aaron's updates; predict method

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: PCAtools
 Type: Package
 Title: PCAtools: Everything Principal Components Analysis
-Version: 2.1.6
+Version: 2.1.8
 Authors@R: c(
     person("Kevin", "Blighe", role = c("aut", "cre"), email = "kevin@clinicalbioinformatics.co.uk"),
     person("Anna-Leigh", "Brown", role = c("ctb")),
@@ -26,7 +26,8 @@ Imports:
   BiocSingular,
   BiocParallel,
   Rcpp,
-  dqrng
+  dqrng,
+  ggalt
 Suggests:
   testthat,
   scran,
