--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,4 +27,5 @@ importFrom('Matrix', 't')
 importFrom('Rcpp', 'sourceCpp')
 importFrom('dqrng', 'generateSeedVectors')
 importFrom('BiocParallel', 'bpmapply', 'SerialParam')
+importFrom('ggalt', 'geom_encircle')
 useDynLib(PCAtools)
