Update ellipse functionality

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: PCAtools
 Type: Package
 Title: PCAtools: Everything Principal Components Analysis
-Version: 2.3.9
+Version: 2.3.11
 Authors@R: c(
     person("Kevin", "Blighe", role = c("aut", "cre"), email = "kevin@clinicalbioinformatics.co.uk"),
     person("Anna-Leigh", "Brown", role = c("ctb")),
@@ -49,7 +49,7 @@ LinkingTo:
   BH,
   dqrng
 URL: https://github.com/kevinblighe/PCAtools
-biocViews: RNASeq, GeneExpression, Transcription, SingleCell, PrincipalComponent
+biocViews: RNASeq, ATACSeq, GeneExpression, Transcription, SingleCell, PrincipalComponent
 VignetteBuilder:
   knitr
 SystemRequirements: C++11
