--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: PCAtools
 Type: Package
 Title: PCAtools: Everything Principal Components Analysis
-Version: 2.3.11
+Version: 2.3.13
 Authors@R: c(
     person("Kevin", "Blighe", role = c("aut", "cre"), email = "kevin@clinicalbioinformatics.co.uk"),
     person("Anna-Leigh", "Brown", role = c("ctb")),
@@ -42,7 +42,8 @@ Suggests:
   DESeq2,
   airway,
   org.Hs.eg.db,
-  magrittr
+  magrittr,
+  rmarkdown
 LinkingTo:
   Rcpp,
   beachmat,
