Migrate matrix shuffler to the new tatami C++ API.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom(BiocSingular,runPCA)
 importFrom(DelayedArray,DelayedArray)
 importFrom(DelayedMatrixStats,colVars)
 importFrom(Rcpp,sourceCpp)
+importFrom(beachmat,initializeCpp)
 importFrom(dqrng,generateSeedVectors)
 importFrom(grDevices,colorRampPalette)
 importFrom(lattice,levelplot)
