Put a minimum version requirement on the beachmat package.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,7 @@ Imports:
   Matrix,
   DelayedMatrixStats,
   DelayedArray,
-  beachmat,
+  beachmat (>= 2.21.1),
   BiocSingular,
   BiocParallel,
   Rcpp,
