fix issue with building PCAtools due to missing tatmi_R header file that should be included in assorthead package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,8 @@ LinkingTo:
   Rcpp,
   beachmat,
   BH,
-  dqrng
+  dqrng,
+  assorthead
 URL: https://github.com/kevinblighe/PCAtools
 biocViews: RNASeq, ATACSeq, GeneExpression, Transcription, SingleCell, PrincipalComponent
 VignetteBuilder:
