--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,36 +14,36 @@ Depends:
   ggplot2,
   ggrepel
 Imports:
-  lattice,
-  grDevices,
-  cowplot,
-  methods,
-  reshape2,
-  stats,
-  Matrix,
-  DelayedMatrixStats,
-  DelayedArray,
-  beachmat (>= 2.21.1),
-  BiocSingular,
-  BiocParallel,
-  Rcpp,
-  dqrng
+    lattice,
+    grDevices,
+    cowplot,
+    methods,
+    reshape2,
+    stats,
+    Matrix,
+    DelayedMatrixStats,
+    DelayedArray,
+    beachmat (>= 2.21.1),
+    BiocSingular,
+    BiocParallel,
+    Rcpp,
+    dqrng,
+    ggalt
 Suggests:
-  testthat,
-  scran,
-  BiocGenerics,
-  knitr,
-  Biobase,
-  GEOquery,
-  hgu133a.db,
-  ggplotify,
-  RMTstat,
-  ggalt,
-  DESeq2,
-  airway,
-  org.Hs.eg.db,
-  magrittr,
-  rmarkdown
+    testthat,
+    scran,
+    BiocGenerics,
+    knitr,
+    Biobase,
+    GEOquery,
+    hgu133a.db,
+    ggplotify,
+    RMTstat,
+    DESeq2,
+    airway,
+    org.Hs.eg.db,
+    magrittr,
+    rmarkdown
 LinkingTo:
   Rcpp,
   beachmat,
